# R-Type

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSources.cmake  Dockerfile  LICENSE  Makefile  README.md
Client/: main.cpp
Client/MainMenu/: Button.cpp  Button.hpp  MainMenu.cpp  MainMenu.hpp  MenuButton.cpp  MenuButton.hpp  Settings.hpp  Splash.cpp  Splash.hpp
Client/OptionsMenu/: OptionsMenu.cpp  OptionsMenu.hpp
Client/game/: Game.cpp  Game.hpp
Client/test/: test.cpp
Documentation/: ECSUML.xml  GFX.xml  R-TypeUML.mdj  RFC.md  RFC_API.md  eventManagerUML.xml  gameUML.xml
Server/: main.cpp
Server/Monsters/: CMakeLists.txt
Server/Monsters/Bird/: Bird.cpp  Bird.hpp  Bird2.cpp  Bird2.hpp  Bird3.cpp  Bird3.hpp  CMakeLists.txt
Server/Monsters/Bird2/: Bird2.cpp  Bird2.hpp  CMakeLists.txt
Server/Monsters/FirstBoss/: CMakeLists.txt  FirsBoss.cpp  FirsBoss.hpp
Server/Monsters/Leaper/: CMakeLists.txt  Leaper.cpp  Leaper.hpp  Leaper2.cpp  Leaper2.hpp  LeaperExtern.cpp
Server/Monsters/Meteorite/: CMakeLists.txt  Meteorite.cpp  Meteorite.hpp
Server/Monsters/Shooter/: CMakeLists.txt  Shooter.cpp  Shooter.hpp
Server/Monsters/Ultimatron/: CMakeLists.txt  Ultimatron.cpp  Ultimatron.hpp
Server/Monsters/includes/: AEnnemy.hpp  IEnnemy.hpp  MonsterInfo.hpp
Server/includes/: DynamicLoader.hpp  DynamicLoaderManager.hpp  GameComponents.hpp  GameConfig.hpp  GameEngine.hpp  GameEvents.hpp  GameInfo.hpp  GameSystems.hpp  Server.hpp  Utils.hpp
Server/includes/Systems/: BonusSystem.hpp  CollideSystem.hpp  DrawSystem.hpp  EnnemySystem.hpp  OutBorders.hpp  PlayerSystem.hpp  ShootSystem.hpp  SpawnSystem.hpp
Server/levelParsing/: ParsingLevel.cpp  ParsingLevel.hpp
Server/sources/: DynamicLoader.cpp  DynamicLoaderManager.cpp  GameConfig.cpp  GameEngine.cpp  GameInfo.cpp  Server.cpp
Server/test/: gameCoreTest.cpp  test.cpp  testParsingLevel.cpp
Serveur/: base.cpp
Serveur/test/: test.cpp
assets/Levels/: level1.config  level2.config  level3.config  level4.config  level5.config  level6.config
assets/menu/: splash.txt
includes/: catch.hpp  utilesBase.hpp
libs/: CMakeLists.txt  CMakeSources.cmake
libs/ECS/: ComponentManager.hpp  Entity.cpp  Entity.hpp  Manager.cpp  Manager.hpp  System.cpp  System.hpp  utiles.hpp
libs/ECS/tests/: ComponentTest.cpp  ManagerTest.cpp  SystemTest.cpp
libs/EventManager/: BaseEvent.hpp  ClassTypeId.cpp  ClassTypeId.hpp  EventManager.hpp  Receiver.hpp
libs/EventManager/unit_tests/: Tests.cpp
libs/Exception/: Exception.cpp  Exception.hpp
libs/Exception/test/: test.cpp
libs/GFX/: Events.cpp  Events.hpp  GfxManager.cpp  GfxManager.hpp  KeyboardManager.cpp  KeyboardManager.hpp  Mouse.cpp  Mouse.hpp  ResourceManager.cpp  ResourceManager.hpp  Singleton.hpp  SoundManager.cpp  SoundManager.hpp  Sprite.cpp  Sprite.hpp  TextManager.cpp  TextManager.hpp  Window.cpp  Window.hpp
libs/GFX/test/: test.cpp
libs/LOG/: Logger.cpp  Logger.hpp
libs/LOG/test/: test.cpp
libs/Network/: networkUtils.hpp
libs/Network/RFC/: MyRfcClient.hpp  MyRfcServer.hpp
libs/Network/socket/include/: ISocketManager.hpp  TcpManager.hpp  TcpSocket.hpp  UdpSocket.hpp
libs/Network/socket/src/: TcpManager.cpp  TcpSocket.cpp  UdpSocket.cpp
libs/Network/tests/: MyRfcTest.cpp  MyRfcTestTcp.cpp  TcpTest.cpp  UdpTest.cpp
